@@ -3303,8 +3303,12 @@ loop:		for(int i = lineNo - 1; i >= 0; i--)
 		}
 		else
 		{
-			lastVisible = getScreenLineEndOffset(visibleLines
-				- electricScroll - 1) - 1;
+			lastVisible = visibleLines - electricScroll - 1;
+			if(lastLinePartial)
+				lastVisible--;
+			if(lastVisible < 0)
+				lastVisible = 0;
+			lastVisible = getScreenLineEndOffset(lastVisible) - 1;
 			if(lastVisible == -1)
 			{
 				lastVisible = getLineEndOffset(displayManager
